View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029107 | Open CASCADE | OCCT:Visualization | public | 2017-09-13 16:47 | 2018-06-29 21:19 |
Reporter | abv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0029107: Visualization - SelectMgr_FrustumBuilder constructor without arguments is not exported | ||||
Description | Sic! SelectMgr_FrustumBuilder constructor without arguments lacks Standard_EXPORT | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
child of | 0026403 | closed | Open CASCADE | Add missing Standard_EXPORT keyword in SelectMgr headers |
|
Branch CR29107 has been created by abv. SHA-1: 3e68044f31ad376c2f279e3ffa31d9d4f80991ef Detailed log of new commits: Author: abv Date: Wed Sep 13 16:49:04 2017 +0300 0029107: Visualization - SelectMgr_FrustumBuilder constructor without arguments is not exported Standard_EXPORT is added |
|
I suppose the trivial patch should be pushed. |
|
Branch CR29107 has been updated forcibly by inv. SHA-1: 4422f7209f076e80409987452347403e18009c76 |
|
Combination - OCCT branch : CR29107 SHA-1: 4422f7209f076e80409987452347403e18009c76 Products branch : master was compiled on Linux, MacOS and Windows platforms and tested on optimize mode. http://jenkins-test-10.nnov.opencascade.com/view/CR29107-master/ Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: No differences that require special attention Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29107 has been deleted by kgv. SHA-1: 4422f7209f076e80409987452347403e18009c76 |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-09-13 16:47 | abv | New Issue | |
2017-09-13 16:47 | abv | Assigned To | => kgv |
2017-09-13 16:47 | abv | Target Version | 7.4.0 => 7.3.0 |
2017-09-13 16:49 | git | Note Added: 0070509 | |
2017-09-13 16:50 | abv | Assigned To | kgv => abv |
2017-09-13 16:50 | abv | Status | new => assigned |
2017-09-14 09:55 | kgv | Relationship added | child of 0026403 |
2017-09-14 09:55 | kgv | Product Version | => 6.9.0 |
2017-09-21 16:43 | kgv | Note Added: 0070741 | |
2017-09-21 16:43 | kgv | Assigned To | abv => bugmaster |
2017-09-21 16:43 | kgv | Severity | minor => trivial |
2017-09-21 16:43 | kgv | Status | assigned => resolved |
2017-09-21 16:43 | kgv | Status | resolved => reviewed |
2017-09-21 22:14 | git | Note Added: 0070767 | |
2017-09-22 12:57 | bugmaster | Test case number | => Not required |
2017-09-22 13:00 | bugmaster | Note Added: 0070781 | |
2017-09-22 13:00 | bugmaster | Status | reviewed => tested |
2017-09-29 13:26 | bugmaster | Changeset attached | => occt master 1a6726da |
2017-09-29 13:26 | bugmaster | Status | tested => verified |
2017-09-29 13:26 | bugmaster | Resolution | open => fixed |
2017-09-29 17:11 | git | Note Added: 0071030 | |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |