0029107: Visualization - SelectMgr_FrustumBuilder constructor without arguments is not exported

Standard_EXPORT is added