src/SelectMgr/SelectMgr_FrustumBuilder.hxx
@@ -30,7 +30,7 @@ class SelectMgr_FrustumBuilder : public Standard_Transient
 {
 public:
   //! Creates new frustum builder with empty matrices
-  SelectMgr_FrustumBuilder();
+  Standard_EXPORT SelectMgr_FrustumBuilder();
 
   //! Stores current world view transformation matrix
   Standard_EXPORT void SetWorldViewMatrix (const Graphic3d_Mat4d& theWorldViewMatrix);
